# src/schemas/add-reservation-schema.ts
@@ -10,17 +10,16 @@ const ifReservationExists = (reservation: ReservationType | null) => (value: str
   return value;
 }
 
-const addReservationSchema = async (data: ReservationType) => {
+const addReservationSchema = async (data: any) => {
 
   const reservation = await Reservation.findOne({ taken: data.active });
 
-  return Joi.object<ReservationType>({
-    user: Joi.string().required(),
-    vehicle: Joi.string().required(),
+  return Joi.object({
+    userId: Joi.string().required(),
+    vehiclePlateNumber: Joi.string().required(),
     parkingZone: Joi.string().required(),
     startTime: Joi.date().required(),
-    endTime: Joi.date().required(),
-    active: Joi.boolean().custom(ifReservationExists(reservation)).required(),
+    active: Joi.boolean().custom(ifReservationExists(reservation)),
   })
 };
 
